OrbitAOS.V6/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orbitaos-v6
  labels:
    name: orbitaos-v6
    app: orbitaos-v6
    managed-by: kubectl
